--- a/Project_04.html
+++ b/Project_04.html
@@ -2,9 +2,222 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>The main trends of the fall-winter 2020 season</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+        @media (max-width: 600px) {
+            .topnav {
+                background-color: gold;
+            }
+        }
+     </style>
 </head>
 <body>
-$END$
+<div id="main-doc">
+    <!-- Sidebar -->
+    <div id="navbar" class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%">
+        <h3 class="w3-bar-item">Menu</h3>
+        <a href="#The_main_trends_of_the_fall-winter_2020_season" class="w3-bar-item w3-button">The main trends of the
+            fall-winter 2020 season</a>
+        <a href="#Closed_face" class="w3-bar-item w3-button">Closed face</a>
+        <a href="#Modest_black_dresses_to_the_floor" class="w3-bar-item w3-button">Modest black dresses to the floor</a>
+        <a href="#Dramatic_embroidered_frock_coats" class="w3-bar-item w3-button">Dramatic embroidered frock coats</a>
+        <a href="#Mens_gray_coats" class="w3-bar-item w3-button">Mens gray coats</a>
+        <a href="#Exquisite_latex" class="w3-bar-item w3-button">Exquisite latex</a>
+        <a href="#Strict_two_with_a_skirt" class="w3-bar-item w3-button">Strict two with a skirt</a>
+        <a href="#Colorful carpets" class="w3-bar-item w3-button">Colorful carpets</a>
+        <a href="#Fluffy_princess_dresses" class="w3-bar-item w3-button">Fluffy princess dresses</a>
+        <a href="#Extremely_long_fringe" class="w3-bar-item w3-button">Extremely long fringe</a>
+        <a href="#Retro_style_double-breasted_coats" class="w3-bar-item w3-button">Retro style double-breasted coats</a>
+        <a href="#Fashionable_windbreakers" class="w3-bar-item w3-button">Fashionable windbreakers</a>
+        <a href="#Intricate_art_prints" class="w3-bar-item w3-button">Intricate art prints</a>
+        <a href="#Fisherman_Hats" class="w3-bar-item w3-button">Fisherman Hats</a>
+    </div>
+
+    <!-- Page Content -->
+    <div style="margin-left:25%">
+
+        <div class="w3-container w3-teal">
+            <h1>Trends 2020</h1>
+        </div>
+
+        <div class="w3-container">
+            <div id="The_main_trends_of_the_fall-winter_2020_season" class="main selection">
+                <h3>The main trends of the fall-winter 2020 season</h3>
+                <p>It is quite obvious that designers strive for a universal wardrobe, out of seasons and clear
+                    trends,<br>
+                    hence floor-length sheath dresses for the evening, strict coats and suits always and everywhere.<br>
+                    On the other hand, the severity was opposed by the craving for home comfort, which found expression
+                    <br>
+                    in patchwork, quilted "blankets", oversized cardigans and carpet prints.</p>
+                <p>The fall-winter 2020 shows were not without theatricality and trends of past eras: there are
+                    silhouettes<br>
+                    of Marie Antoinette's dresses, embroidered frock coats, and a costume chorus at the Louis Vuitton
+                    show.<br>
+                    Plus endless references to religious themes - monastic silhouettes, crosses, covered heads and
+                    closed faces.</p>
+                <p>Demna Gvasalia showed his version of the fashion apocalypse at all, sinking the first rows of guest
+                    chairs under <br>
+                    the water, along which the models walked to the accompaniment of the end of the world broadcast on
+                    the LED panel, <br>
+                    which made his show for Balenciaga the most spectacular and memorable show of the season.</p>
+                <ul>
+                    <p>The main trends this fall and winter include:</p>
+                    <li>Bulky shoulders and sleeves</li>
+                    <li>Leather clothes</li>
+                    <li>Total black</li>
+                    <li>Pantsuits</li>
+                    <li>Sequins</li>
+                    <li>Cell</li>
+                    <li>Patchwork</li>
+                </ul>
+                <p>And now you will read more detailed information about the sensational trends.</p>
+            </div>
+            <div id="Closed_face" class="main selection">
+                <h3>Closed face</h3>
+                <p>If you prefer to go out to people incognito, this trend is definitely for you. Hand in hand with the
+                    fashion <br>
+                    for the most closed modest dresses is the desire of designers to hide the faces of models behind
+                    masks.</p>
+                <img id="image1"
+                     src="https://media.vogue.ru/photos/5e68e955a9b2020008b55f38/master/w_1024%2cc_limit/%D0%BB%D0%B8%D1%86%D0%BE.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Modest_black_dresses_to_the_floor" class="main selection">
+                <h3>Modest black dresses to the floor</h3>
+                <p>Another very important theme of the entire Fashion Week season is genuine modesty. The sexy miniature
+                    dresses<br>
+                    were replaced by the most restrained, puritanical, with long sleeves and floor-length skirts.<br>
+                    The most spectacular, in our opinion, are completely black.</p>
+                <img id="image2"
+                     src="https://media.vogue.ru/photos/5e67a761a9b2020008b55cd5/master/w_1024%2cc_limit/%D0%BA8.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Dramatic_embroidered_frock_coats" class="main selection">
+                <h3>Dramatic embroidered frock coats</h3>
+                <p>
+                    Theatricality at Fashion Weeks this time was especially in high esteem. Confirmation is the love of
+                    designers <br>
+                    for dramatic embroidered jackets, which are more reminiscent of stage costumes for Shakespeare's
+                    tragedies.</p>
+                <img id="image3"
+                     src="https://media.vogue.ru/photos/5e68f8caa9b2020008b55f76/master/w_1024%2cc_limit/%D1%81%D1%8E%D1%80%D1%82%D1%83%D0%BA%D0%B8.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Mens_gray_coats" class="main selection">
+                <h3>Mens gray coats</h3>
+                <p>As you know, without classics anywhere. One of the main things next winter is a strict man's gray
+                    coat, which <br>
+                    will definitely become your best friend for many seasons. Look for the most correct and beautiful
+                    versions <br>
+                    in the collections of Alberta Ferretti, Sportmax, Prada and many other brands.</p>
+                <img id="image4"
+                     src="https://media.vogue.ru/photos/5e68efd0281b31000811aa25/master/w_1024%2cc_limit/%D0%BF%D0%B0%D0%BB%D1%8C%D1%82%D0%BE.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Exquisite_latex" class="main selection">
+                <h3>Exquisite latex</h3>
+                <p>Latex in the next fall-winter season will open up a new side for fashionistas. Instead of dresses
+                    with <br>
+                    a touch of BDSM aesthetics, we choose suits, long skirts and dresses with draperies from iridescent
+                    fabric.</p>
+                <img id="image5"
+                     src="https://media.vogue.ru/photos/5e68e535281b31000811aa13/master/w_1024%2cc_limit/%D0%BB%D0%B0%D1%82%D0%B5%D0%BA%D1%81.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Strict_two_with_a_skirt" class="main selection">
+                <h3>Strict two with a skirt</h3>
+                <p>The most desirable and fashionable ensemble of the next season is a strict wool jacket with a leather
+                    belt <br>
+                    and a skirt below the knee with a high side slit. It is your killer tool for your most important
+                    business <br>
+                    negotiations. These suits can be worn both with shoes and with high boots.</p>
+                <img id="image6"
+                     src="https://media.vogue.ru/photos/5e67a763a9b2020008b55ce1/master/w_1024%2cc_limit/%D0%BA18.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Colorful carpets" class="main selection">
+                <h3>Colorful carpets</h3>
+                <p>The most fashionable in six months will dress in real carpets. We remember the masterpieces that
+                    adorned <br>
+                    the walls of our grandparents' apartments, and we go shopping with just such references.</p>
+                <img id="image7"
+                     src="https://media.vogue.ru/photos/5e68e6b2281b31000811aa15/master/w_1024%2cc_limit/%D0%BA%D0%BE%D0%B2%D1%80%D1%8B.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Fluffy_princess_dresses" class="main selection">
+                <h3>Fluffy princess dresses</h3>
+                <p>If you are a fan of the Crown TV series, then you will definitely appreciate this trend. Instead of
+                    <br>
+                    the usual evening gowns, we choose outfits that are worthy of the ballrooms of kings and queens.
+                    L<br>
+                    ush skirts, satin and silk ribbons, embroidery and pearls - we learn to dress in the spirit of the
+                    aristocracy.</p>
+                <img id="image8"
+                     src="https://media.vogue.ru/photos/5e68fbe8a9b2020008b55f78/master/w_1024%2cc_limit/%D0%B3%D0%BE%D0%BB%D1%83%D0%B1%D1%8B%D0%B5.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Extremely_long_fringe" class="main selection">
+                <h3>Extremely long fringe</h3>
+                <p>Fringe is one of the most important trends for the coming season. Moreover, the designers urge you to
+                    be guided <br>
+                    by the "the longer the better" attitude and choose dresses, skirts, jackets and even bags with the
+                    longest fringe<br>
+                    made of leather and fabric. She will make each of your bows airy and agile.</p>
+                <img id="image9"
+                     src="https://media.vogue.ru/photos/5e68f2aca9b2020008b55f40/master/w_1024%2cc_limit/%D0%B1%D0%B0%D1%85%D1%80%D0%BE%D0%BC%D0%B0.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Retro_style_double-breasted_coats" class="main selection">
+                <h3>Retro style double-breasted coats</h3>
+                <p>Designers urge to abandon experiments with outerwear in the coming season and look for inspiration in
+                    the past. <br>
+                    So, almost the most cited in the collections was the classic double-breasted coat with large gold
+                    buttons, <br>
+                    this is what we saw at the shows of Loewe, Givenchy, JW Anderson and many other brands.</p>
+                <img id="image10"
+                     src="https://media.vogue.ru/photos/5e69e8d5281b31000811ab46/master/w_1024%2cc_limit/%D0%B6%D0%B0%D0%BA%D0%B5%D1%82%D1%86%D1%8B.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Fashionable_windbreakers" class="main selection">
+                <h3>Fashionable windbreakers</h3>
+                <p>This functional wardrobe attribute of hikers and small children promises to become the most
+                    fashionable in six months. <br>
+                    Moreover, Nicolas Ghesquière, Virgil Abloh and Donatella Versace suggest combining windbreakers with
+                    girlish dresses, <br>
+                    quilted skirts and transparent organza trousers to create a strong contrast.</p>
+                <img id="image11"
+                     src="https://media.vogue.ru/photos/5e69ea5e281b31000811ab48/master/w_1024%2cc_limit/%D0%B2%D0%B5%D1%82%D1%80%D0%BE%D0%B2%D0%BA%D0%B8.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Intricate_art_prints" class="main selection">
+                <h3>Intricate art prints</h3>
+                <p>
+                    Clothes should be a real work of art. This slogan was used by designers at Fashion Weeks. The most
+                    complex art prints <br>
+                    created by Julio Pomar and Gregory Crewdson, respectively, appeared in the Kenzo and Namacheko
+                    collections,<br>
+                    and Natasha Ramsay-Levy at Chloé invited the artist Rita Ackermann to work on the fall-winter 2020
+                    collection.</p>
+                <img id="image12"
+                     src="https://media.vogue.ru/photos/5e69e9aca9b2020008b560ad/master/w_1024%2cc_limit/%D0%BD%D0%B0%D0%BC%D0%B0.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+            </div>
+            <div id="Fisherman_Hats" class="main selection">
+                <h3>Fisherman Hats</h3>
+                <p>Fisherman's hats did not leave indifferent the designers this February and March. Several brands have
+                    developed <br>
+                    their own variations at once. Our favorites are Christophe Lehmer, Felipe Oliveira Baptista and
+                    Samuel Drira.</p>
+                <img id="image13"
+                     src="https://media.vogue.ru/photos/5e6898a2281b31000811a7b3/master/w_1024%2cc_limit/%D0%BF%D0%B0%D0%BD%D0%BC%D1%8B.jpg"
+                     width="800px" height="500px" style="max-width: 500px">
+                <p>However, remember, you do not need to follow trends. Everyone is a separate person,<br>
+                    so the main thing is that you were comfortable and you felt confident and unsurpassed!</p>
+            </div>
+        </div>
+
+    </div>
+</div>
 </body>
 </html>
