--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <title>My project</title>
 </head>
 <body>
-<a href="/studing/calculator.html">Calculator</a>
+<a href="/studing/calculator.html">Calculator</a><br>
+<a href="/studing/game_card.html">Game Card</a>
 </body>
