Get info and list

--- a/employees.html
+++ b/employees.html
@@ -13,22 +13,14 @@
 <section class="container">
     <div class="one">
         <h3>List of employees</h3>
-        <ul>
-            <li>User1</li>
-            <li>User1</li>
-            <li>User1</li>
+        <ul id="employee-list">
+            No users
         </ul>
     </div>
     <div class="two">
         Employee info
-        <div>
-            <img src="images/employees/user1.img">
-        </div>
-        <div>
-            Name: <span>User name</span>
-        </div>
-        <div>
-            Text: <span>User text</span>
+        <div id="employee-info">
+            No user info
         </div>
     </div>
 </section>
